--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <hr>
   
   <ul>
-    <li><a class="active" href="#top">Home</a></li>
+    <li><a class="active" href="#main">Home</a></li>
     <li><a href="#projects">Projects</a></li>
     <li><a href="#contact me">Contact</a></li>
   </ul>
   
   <h2>About Me</h2>
-  <p>My name is Mohammad Sarfaraz Hussain. I am a aspiring software engineer with a focus in full stack engineering. I am 26 years old.</p>
+  <p>My name is Mohammad Sarfaraz Hussain. I am an aspiring software engineer with a focus in full stack engineering.</p>
   <hr>
   <br>
   <h2>These are my projects:</>
@@ -40,39 +40,39 @@
   </div>
     
 
-  <div class="row">
+
     <div class="column">
-      <div class="content">
+      <div class="content2">
       <a href="https://github.com/MSarfarazH/VisualExplorerRailsApp">
       <img src="./Assets/mountain.jpg" alt="Mountains" style="width:100%">
       <h3>Javascript</h3>
-      </div>
-      </a>
+    </a>
+    </div>
     </div>
 
   <div class="column">
-    <a href="https://github.com/MSarfarazH/rails-index-show-new-create-lab">
-    <div class="content">
+    <a href="https://github.com/MSarfarazH/03-password-generator">
+    <div class="content2">
     <img src="./Assets/castle.jpg" alt="Castle" style="width:100%">
-      <h3>Ruby</h3>
+      <h3>Password Generator</h3>
     </a>
     </div>
   </div>
 
   <div class="column">
-    <a href="https://msarfarazh.github.io/HTML-CSS-and-Git-Code-Refactor/">
-    <div class="content">
+    <a href="https://github.com/MSarfarazH/Code-Quiz">
+    <div class="content2">
     <img src="./Assets/snow.jfif" alt="snow" style="width:100%">
-      <h3>Refactoring Code</h3>
+      <h3>Code Quiz</h3>
     </a>
     </div>
   </div>
 
   <div class="column">
-    <a href="https://www.python.org/">
-    <div class="content">
+    <a href="https://msarfarazh.github.io/05-Work-Day-Scheduler/">
+    <div class="content2">
     <img  src="./Assets/underwater.jpg" alt="underwater" style="width:100%">
-      <h3>Python</h3>
+      <h3>Work Day Scheduler</h3>
     </a>
     </div>
 
@@ -83,9 +83,13 @@
 
 <div class="footer">
   <section id="contact me">
-  <p>Contact me</p>
+  <h2>Contact me</h2>
   <p> m.s.hussain@outlook.com</p>
   <p>(512) 605 - 9034</p>
+  <a id="gh" href="https://github.com/MSarfarazH"><p>My GitHub </p> </a>
+  <a id="li" href="https://www.linkedin.com/in/msarfarazh/"><p>My LinkedIn </p> </a>
+  <a id="resume" href="https://zety.com/profile/msh-resume"><p>My Resume </p> </a>
+
 </div>
 <!-- END MAIN -->
 </div>
