--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
-<title>Mohammads Portfolio</title>
+<title>Mohammad Sarfaraz Hussain - Portfolio</title>
 </head>
 
 </head>
@@ -16,7 +16,6 @@
 
   
   <h1>Mohammad Sarfaraz Hussain</h1>
-  <hr>
   
   <ul>
     <li><a class="active" href="#main">Home</a></li>
@@ -26,26 +25,25 @@
   
   <h2>About Me</h2>
   <p>My name is Mohammad Sarfaraz Hussain. I am an aspiring software engineer with a focus in full stack engineering.</p>
-  <hr>
+
   <br>
   <h2>These are my projects:</>
   
   
   <div class="content">
     <section id="projects"></section>
-    <a href="https://github.com/MSarfarazH/Eventr">
+    <a href="https://github.com/MSarfarazH/employee-database">
     <img src="./Assets/stars.jpg" alt="Stars" style="width:100%">
-    <h3>Eventr</h3>
+    <h3>Employee Database</h3>
     </a>
   </div>
     
-
 
     <div class="column">
       <div class="content2">
       <a href="https://github.com/MSarfarazH/VisualExplorerRailsApp">
       <img src="./Assets/mountain.jpg" alt="Mountains" style="width:100%">
-      <h3>Javascript</h3>
+      <h3>Visual Explorer</h3>
     </a>
     </div>
     </div>
@@ -69,7 +67,7 @@
   </div>
 
   <div class="column">
-    <a href="https://msarfarazh.github.io/05-Work-Day-Scheduler/">
+    <a href="https://github.com/MSarfarazH/work-day-scheduler">
     <div class="content2">
     <img  src="./Assets/underwater.jpg" alt="underwater" style="width:100%">
       <h3>Work Day Scheduler</h3>
@@ -93,6 +91,7 @@
 </div>
 <!-- END MAIN -->
 </div>
+
 
 </body>
 </html>
