shadow made black

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p>My name is Mohammad Sarfaraz Hussain. I am an aspiring software engineer with a focus in full stack engineering.</p>
 
   <br>
-  <h2>These are my projects:</>
+  <h2>These are my projects:</h2>
   
   
   <div class="content">
@@ -87,7 +87,7 @@
   <a id="gh" href="https://github.com/MSarfarazH"><p>My GitHub </p> </a>
   <a id="li" href="https://www.linkedin.com/in/msarfarazh/"><p>My LinkedIn </p> </a>
   <a id="resume" href="https://zety.com/profile/msh-resume"><p>My Resume </p> </a>
-
+  </section>
 </div>
 <!-- END MAIN -->
 </div>
